Fixed several issues with fluidity and finger actions on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
+    overscroll-behavior: none;
 }
 
 #map {
     width: 100vw;
     height: 100vh;
+    touch-action: none;
 }
 
 .ol-attribution.ol-unselectable {
@@ -32,24 +34,27 @@ html, body {
     top: 2vh;
     left: 2vw;
     width: 96vw;
-    height: 96vh;
+    height: 94vh;
     background: white;
     z-index: 1003;
     border: 2px solid #444;
     box-shadow: 0 0 20px #444;
     border-radius: 1em;
+    padding-top: 2.2em;
+    touch-action: none;
 }
 
 #popupInner {
     width: 100%;
-    height: 90%;
+    height: calc(100% - 4.2em);
     font-size: 0.75em;
+    touch-action: none;
 }
 
 #popupClose {
     position: absolute;
-    top: 0.5em;
-    right: 1em;
+    top: 0.4em;
+    right: 0.6em;
     z-index: 1001;
     font-size: 1.0em;
     background: #eee;
@@ -83,6 +88,11 @@ html, body {
     align-items: center;
     color: #444;
     gap: 1em;
+    position: absolute;
+    top: 0.4em;
+    left: 0.6em;
+    right: 3em;
+    margin: 0;
 }
 
 #mapInfo {
@@ -114,4 +124,33 @@ html, body {
 
 .ol-tooltip {
     z-index: 1100;
+}
+
+@media (max-width: 700px) {
+    #mapPopup {
+        top: 1vh;
+        left: 1vw;
+        width: 98vw;
+        height: 98vh;
+        border-radius: 0.6em;
+    }
+
+    #mapInfo,
+    #mapAttribution,
+    #popupAttribution {
+        font-size: 0.7em;
+        padding: 0.4em 0.6em;
+    }
+
+    #popupControls {
+        flex-wrap: wrap;
+        gap: 0.5em;
+        width: 100%;
+        right: 3.2em;
+    }
+
+    #popupClose {
+        top: 0.4em;
+        right: 0.6em;
+    }
 }
